--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
+          <li><a ng-href="#/product">Product</a></li>
           <li><a ng-href="#/contact">Contact</a></li>
         </ul>
         <h3 class="text-muted">email</h3>
@@ -74,6 +75,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/product.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
         <!-- endbuild -->
 </body>
 </html>
