--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Email application using Angular JS on Node</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -29,7 +29,7 @@
           <li><a ng-href="#/product">Product</a></li>
           <li><a ng-href="#/contact">Contact</a></li>
         </ul>
-        <h3 class="text-muted">email</h3>
+        <h3 class="text-muted">Email Application</h3>
       </div>
 
       <div ng-view=""></div>
@@ -75,6 +75,12 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/product.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
+        <!-- endbuild -->
+</body>
+</html>
+"></script>
         <script src="scripts/controllers/product.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <!-- endbuild -->
