--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@
                 </li>
                 <li><a ng-href="#/product">Product</a>
                 </li>
+                <li><a ng-href="#/news">News</a>
+                </li>
                 <li><a ng-href="#/contact">Contact</a>
                 </li>
             </ul>
@@ -89,6 +91,7 @@
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/product.js"></script>
     <script src="scripts/controllers/contact.js"></script>
+    <script src="scripts/controllers/news.js"></script>
     <!-- endbuild -->
 
 </body>
