highlight active links

--- a/app/index.html
+++ b/app/index.html
@@ -24,18 +24,13 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-        <div class="header">
+        <div class="header" ng-controller="HeaderCtrl">
             <ul class="nav nav-pills pull-right">
-                <li class="active"><a ng-href="#">Home</a> 
-                </li>
-                <li><a ng-href="#/about">About</a> 
-                </li>
-                <li><a ng-href="#/product">Product</a> 
-                </li>
-                <li><a ng-href="#/news">News</a> 
-                </li>
-                <li><a ng-href="#/contact">Contact</a> 
-                </li>
+                <li ng-class="{active:isActive('/')}"><a ng-href="#">Home</a></li>
+                <li ng-class="{active:isActive('/about')}"><a ng-href="#/about">About</a></li>
+                <li ng-class="{active:isActive('/product')}"><a ng-href="#/product">Product</a></li>
+                <li ng-class="{active:isActive('/news')}"><a ng-href="#/news">News</a></li>
+                <li ng-class="{active:isActive('/contact')}"><a ng-href="#/contact">Contact</a></li>
             </ul>
             <h3 class="text-muted">Email Application</h3>
         </div>
@@ -99,6 +94,7 @@
     <script src="scripts/controllers/product.js"></script>
     <script src="scripts/controllers/contact.js"></script>
     <script src="scripts/controllers/news.js"></script>
+    <script src="scripts/controllers/header.js"></script>
     <!-- endbuild -->
 
 </body>
