--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,15 @@
                 <li ng-class="{active:isActive('/product')}"><a ng-href="#/product">Product</a></li>
                 <li ng-class="{active:isActive('/news')}"><a ng-href="#/news">News</a></li>
                 <li ng-class="{active:isActive('/contact')}"><a ng-href="#/contact">Contact</a></li>
+            
             </ul>
             <h3 class="text-muted">Email Application</h3>
+        </div>
+        
+        <div>
+            <ul>
+                  <li><a ng-href="#/inbox">Inbox</a></li>
+            </ul>
         </div>
 
         <div ng-view=""></div>
