--- a/app/index.html
+++ b/app/index.html
@@ -39,12 +39,13 @@
         <div>
             <ul>
                   <li><a ng-href="#/inbox">Inbox</a></li>
+                  <li><a ng-href="#/email">Email</a></li>
             </ul>
         </div>
 
         <div ng-view=""></div>
         
-        <div class="jumbotron">
+        <div class="jumbotron" ng-hide="true">
             <h4>{{pageTitle}}</h4>
             <input type="text" ng-model="pageTitle">
             <br>
@@ -102,6 +103,8 @@
     <script src="scripts/controllers/contact.js"></script>
     <script src="scripts/controllers/news.js"></script>
     <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/controllers/inbox.js"></script>
+    <script src="scripts/controllers/email.js"></script>
     <!-- endbuild -->
 
 </body>
