--- a/app/index.html
+++ b/app/index.html
@@ -36,10 +36,10 @@
             <h3 class="text-muted">Email Application</h3>
         </div>
         
-        <div>
-            <ul>
-                  <li><a ng-href="#/inbox">Inbox</a></li>
-                  <li><a ng-href="#/email">Email</a></li>
+        <div role="tabpanel">        
+            <ul class="nav nav-tabs" role="tablist">
+                <li ng-class="{active:isActive('/inbox')}"><a ng-href="#/inbox">Inbox</a></li>
+                <li ng-class="{active:isActive('/email')}"><a ng-href="#/email">Email</a></li>
             </ul>
         </div>
 
