--- a/app/index.html
+++ b/app/index.html
@@ -46,9 +46,8 @@
         <div ng-view=""></div>
         
         <div ng-controller="InboxCtrl">
+            <h4>{{pageTitle}}</h4>
             <input type="text" ng-model="pageTitle">
-            <br>
-            <div>We'll create an inbox here!!</div>
         </div>
 
         <div class="footer">
