--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-XXXXX-X');
+        ga('create', 'UA-57527784-1');
         ga('send', 'pageview');
     </script>
 
