--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,7 @@
                 <li ng-class="{active:isActive('/about')}"><a ng-href="#/about">About</a></li>
                 <li ng-class="{active:isActive('/product')}"><a ng-href="#/product">Product</a></li>
                 <li ng-class="{active:isActive('/news')}"><a ng-href="#/news">News</a></li>
-                <li ng-class="{active:isActive('/contact')}"><a ng-href="#/contact">Contact</a></li>
-            
+                <li ng-class="{active:isActive('/contact')}"><a ng-href="#/contact">Contact</a></li>            
             </ul>
             <h3 class="text-muted">Email Application</h3>
         </div>
@@ -51,7 +50,7 @@
         </div>
 
         <div class="footer">
-            <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+            <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team :)</p>
         </div>
     </div>
 
@@ -106,5 +105,4 @@
     <!-- endbuild -->
 
 </body>
-
 </html>
